# DatastructuresandAlgorithmsLab

./: .coverage  README.md  The Specification Document.md  main.py  pyproject.toml  week 1 report.md
Code/: .coverage  neural_network.py
Code/Neural network/: network.py
Code/NeuralNetwork/: MLP copy.ipynb  MLP.ipynb  data_preprocessing.py  function.py  multilayerPerceptron.py  multilayer_perceptron.py  network.py  single_neuron.py  test2_jupyter.ipynb  tmp_nn.py
Code/input/titanic/: prep_data.py
Code/interface_package/: interface.py
Code/test/: .coverage  test_function.py  test_integration.py  test_interface.py  test_mlp.py  test_multilayerPerceptron.py  test_prep_data.py
Code/test/__pycache__/: test_sigmoide.py
Docs/: Documentation.md  Implementation_document.md  Testing_documentation.md  The_specification_document.md  User_guide.md
Docs/Weekly report/: week 2 report.md  week 3 report.md  week 6 report.md
Weekly report/: Recap week2.docx  week 2 report.md  week 3 report.md  week 4 report.md  week 5 report.md  ~$cap week2.docx  ~WRL3498.tmp
